--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,9 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
+
+
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -45,7 +47,37 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <TextView
+        android:id="@+id/peopleAmountTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="1"
+        android:labelFor="@+id/amountEditText"
+        android:text="@string/peopleAmount"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <LinearLayout
+        android:id="@+id/peopleLinearLayout"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal" >
+    <EditText
+        android:id="@+id/peopleAmountEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6" >
+
+    </EditText>
+    </LinearLayout>
+
+
+
+
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
         android:layout_gravity="right|center_vertical"
@@ -160,6 +192,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <Space />
+
 
 </GridLayout>
